# djaevel

./: Cargo.toml
.cargo/: config.toml
assets/Pixel Crawler 1.1/Heroes/Knight/Death/: Death.aseprite
assets/Pixel Crawler 1.1/Weapons/Wood/: Wood.aseprite
src/: animation.rs  assets.rs  camera.rs  common.rs  enemy.rs  main.rs  player.rs  stats.rs  weapon.rs
